--- a/breakfast.html
+++ b/breakfast.html
@@ -2,18 +2,20 @@
 <div class="navbar">
 	<div class="navbar-inner">
 	<div class="left">
-		<a class="link icon-only back"><i class="icon icon-back"></i></a>
+		<a class="link icon-only back"><i class="icon icon-back color-black"></i></a>
 		</div>
 		<div class="title">
-		Menu Breakfast
+		<img src="img/sunspot logo negro-02.png" width="160px" class="center-block img-responsive">
 		</div>
 	</div>
 	</div>
 	
 	<section class="page-content" id="menu">
+	<h3>WOMAN</h3>
 		
 		<article class="block">
 			<div class="row no-gap">
+			
 				<div class="col-50">
 					
 					
